--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,6 +65,7 @@ chrono = "0.4.39"
 scraper = "0.22.0"
 educe = "0.6.0"
 target-triple = "0.1.3"
+quick-xml = "0.37.2"
 
 pretty_assertions = "1.4.1"
 test-case = "3.3.1"
