--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
           toolchain: stable
 
       - uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "ci"
 
       - name: Install audit
         run: |
