--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,8 @@ scraper = "0.22.0"
 educe = "0.6.0"
 quick-xml = "0.37.2"
 clap = { version = "4.5.31", features = ["derive"] }
+termion = "4.0.4"
+serde_json = "1.0.140"
 
 pretty_assertions = "1.4.1"
 test-case = "3.3.1"
