--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ quick-xml = "0.37.2"
 clap = { version = "4.5.31", features = ["derive"] }
 serde_json = "1.0.140"
 terminal_size = "0.4.1"
+fast2s = "0.3.1"
 
 pretty_assertions = "1.4.1"
 test-case = "3.3.1"
